--- a/templates/pages/addEditor.html.twig
+++ b/templates/pages/addEditor.html.twig
@@ -21,15 +21,16 @@
       <div class="naccs">
        <div class="grid">
         <div class="row">
-         {{ form_start(editorForm) }}
-         <form id="search-form" name="sB" method="submit" role="search" action="#">
+
+
+          {{ form_start(editorForm, {'method': 'POST', 'attr':{'id': 'search-form', 'name': 'sB'}}) }}
           <div class="row">
 
 
            <div class="col-lg-12 bugFormSpaces">
             <fieldset>
              <div class="col-lg-12 bugInsideFormSpaces">
-              {{ form_row(editorForm.editorName, {'label':'Nom de l\'éditeur :'}) }}
+              {{ form_row(editorForm.editorName, {'label':'Nom de l\'éditeur :', 'attr': {'class': 'inputBugForm'}}) }}
              </div>
 
             </fieldset>
@@ -42,8 +43,9 @@
            </div>
 
           </div>
-         </form>
-         {{ form_end(editorForm) }}
+          {{ form_end(editorForm) }}
+
+
         </div>
        </div>
       </div>
