--- a/templates/pages/addGame.html.twig
+++ b/templates/pages/addGame.html.twig
@@ -21,34 +21,24 @@
       <div class="naccs">
        <div class="grid">
         <div class="row">
-         <form id="search-form" name="sB" method="submit" role="search" action="#">
-          <div class="row">
 
+         {{ form_start(gameForm, {'method': 'POST', 'attr':{'id': 'search-form', 'name': 'sB'}}) }}
+          <div class="row">
 
            <div class="col-lg-12 bugFormSpaces">
             <fieldset>
              <div class="col-lg-12 bugInsideFormSpaces">
-              <label for="gameTitle">Titre du Jeu:</label>
-              <input type="text" class="inputBugForm" name="gameTitle" required>
+              {{ form_row(gameForm.nameGame, {'label':'Nom du jeu :', 'attr': {'class': 'inputBugForm'}}) }}
              </div>
              <div class="col-lg-12 bugInsideFormSpaces">
-              <label for="gamePublicationYear">Année de publication:</label>
-              <input type="number" class="inputBugForm" name="gamePublicationYear" required>
+              {{ form_row(gameForm.yearOfPublication, {'label':'Année de publication :', 'attr': {'class': 'inputBugForm'}}) }}
              </div>
-
              <div class="col-lg-12 bugInsideFormSpaces">
-              <label for="gameEditor">Editeur du jeu:</label>
-              <select class="searchFormPage inputBugForm" name="gameEditor" id="gameEditor" required>
-               <option value="bethesda">Bethesda</option>
-               <option value="ubisoft">Ubisoft</option>
-               <option value="electronicArts">Electronic Arts</option>
-               <option value ="cdRedProjekt">CD Red Projekt</option>
-              </select>
+              {{ form_row(gameForm.idEditor, {'label':'Editeur du jeu :', 'attr': {'class': 'searchFormPage inputBugForm'}}) }}
              </div>
              <div class="col-lg-12 bugInsideFormSpaces">
               <p class="textAddGame">Vous ne trouvez pas l'éditeur correspondant ? <a href="{{ path('editorCreationPage') }}">Ajoutez-le !</a></p>
              </div>
-
             </fieldset>
            </div>
 
@@ -59,7 +49,7 @@
            </div>
 
           </div>
-         </form>
+         {{ form_end(gameForm) }}
         </div>
        </div>
       </div>
