Bases for reset password and mailer, preparation for form bug, search for bug rating

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -70,7 +70,7 @@
                                                 </form>
                                             </div>
                                         </li>
-                                        <li><a href="{{ path('registrationPage') }}">Inscription</a></li>
+                                        <li><a href="{{ path('app_register') }}">Inscription</a></li>
                                         <li><a href="{{ path('connectionPage') }}">Connexion</a></li>
                                         <li>
                                             <div>
