--- a/public/assets/css/templatemo-plot-listing.css
+++ b/public/assets/css/templatemo-plot-listing.css
@@ -1562,12 +1562,12 @@ contact
     border-bottom-left-radius: 7px;
 }
 
-form#contact {
+form#contact, .registrationForm {
     position: relative;
     margin: 0px 60px 0px 45px;
 }
 
-form#contact input {
+form#contact input, .registrationForm input {
     width: 100%;
     height: 46px;
     border-radius: 7px;
@@ -1581,16 +1581,16 @@ form#contact input {
     margin-bottom: 30px;
 }
 
-form#contact ul li {
+form#contact ul li, .registrationForm ul li {
     display: inline-block;
     margin-right: 30px;
 }
 
-form#contact ul li:last-child {
+form#contact ul li:last-child, .registrationForm ul li:last-child {
     margin-right: 0px;
 }
 
-form#contact input[type=checkbox] {
+form#contact input[type=checkbox], .registrationForm input[type=checkbox] {
     display: inline-block;
     width: 15px;
     min-width: 15px;
@@ -1601,19 +1601,19 @@ form#contact input[type=checkbox] {
     cursor: pointer;
 }
 
-form#contact span {
+form#contact span, .registrationForm span {
     color: #8d99af;
     font-size: 14px;
     font-weight: 500;
     margin-left: 8px;
 }
 
-form#contact input::placeholder {
+form#contact input::placeholder, .registrationForm input::placeholder {
     color: #8d99af;
     font-weight: 500;
 }
 
-form#contact textarea {
+form#contact textarea, .registrationForm textarea {
     margin-top: 10px;
     width: 100%;
     min-width: 100%;
@@ -1632,12 +1632,12 @@ form#contact textarea {
     margin-bottom: 30px;
 }
 
-form#contact textarea::placeholder {
+form#contact textarea::placeholder, .registrationForm textarea::placeholder {
     color: #8d99af;
     font-weight: 500;
 }
 
-form#contact button {
+form#contact button, .registrationForm button {
     margin-bottom: -15px;
     display: inline-block;
     background-color: #8d99af;
@@ -1653,7 +1653,7 @@ form#contact button {
     transition: all .3s;
 }
 
-form#contact button i {
+form#contact button i, .registrationForm button i {
     margin-right: 10px;
     width: 24px;
     height: 24px;
@@ -1666,7 +1666,7 @@ form#contact button i {
     line-height: 24px;
 }
 
-form#contact button:hover {
+form#contact button:hover, .registrationForm button:hover {
     background-color: #2b2d42;
     color: #fff;
 }
