--- a/templates/pages/connection.html.twig
+++ b/templates/pages/connection.html.twig
@@ -32,12 +32,13 @@
                                 <div class="col-lg-2"><p></p></div>
                                 {% else %}
 
-                                {% if error %}
-                                    <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-                                {% endif %}
+                                
 
 
                                 <form id="contact" class="connectInscript" action="{{ path('connectionPage') }}" method="post">
+                                {% if error %}
+                                    <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                                {% endif %}
                                     <div class="row">
                                         <div class="col-lg-12">
                                             <fieldset>
@@ -47,6 +48,7 @@
                                         <div class="col-lg-12">
                                             <fieldset>
                                                 <input name="password" type="password" class="form-control" id="password" placeholder="Password" required="">
+                                                <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
                                             </fieldset>
                                         </div>
                                         <div class="col-lg-12">
