--- a/templates/pages/inscription.html.twig
+++ b/templates/pages/inscription.html.twig
@@ -27,7 +27,7 @@
         <div class="col-lg-12 align-self-center">
         
 
-         <form id="contact" class="connectInscript" action="" method="get">
+         <div class="connectInscript registrationForm">
           <div class="row">
            <div class="col-lg-12">
            {{ form_start(registrationForm) }}
@@ -47,7 +47,7 @@
            </div>
            {{ form_end(registrationForm) }}
           </div>
-         </form>
+         </div>
 
         </div>
        </div>
