--- a/templates/admin/adminPage.html.twig
+++ b/templates/admin/adminPage.html.twig
@@ -1,4 +1,4 @@
-{% extends '../base.html.twig' %}
+{% extends './base.html.twig' %}
  {% block content %}
   <div class="page-heading">
    <div class="container">
@@ -6,7 +6,7 @@
      <div class="col-lg-4"></div>
      <div class="col-lg-4">
       <div class="top-text header-text">
-       <h2>Admin</h2>
+       <h2>Table de gestion d'admin</h2>
       </div>
      </div>
      <div class="col-lg-4"></div>
@@ -19,43 +19,56 @@
    <div class="row">
     <div class="col-lg-12">
      <ul class="adminNav">
-      <li>
-       <a href="#">Bugs</a>
-      </li>
-      <li>
-       <a href="#">Résolution Bugs</a>
-      </li>
-      <li>
-       <a href="#">Solution Bugs</a>
-      </li>
-      <li>
-       <a href="#">Jeux</a>
-      </li>
-      <li>
-       <a href="#">Editeurs</a>
-      </li>
-      <li>
-       <a href="#">Messages contact</a>
-      </li>
-      <li>
-       <a href="#">Utilisateurs</a>
-      </li>
-      <li>
-       <a href="#">Commentaires</a>
-      </li>
+        <li class="{% if app.request.attributes.get('_route') == 'adminGestionBugsPage' %}active{% endif %}">
+            <a class="tablesLinks" href="{{ path('adminGestionBugsPage') }}">Bugs</a>
+        </li>
+        <li class="{% if app.request.attributes.get('_route') == 'adminGestionBugsFixPage' %}active{% endif %}">
+            <a class="tablesLinks" href="{{ path('adminGestionBugsFixPage') }}">Résolution Bugs</a>
+        </li>
+        <li class="{% if app.request.attributes.get('_route') == 'adminGestionBugsSolutionPage' %}active{% endif %}">
+            <a class="tablesLinks" href="{{ path('adminGestionBugsSolutionPage') }}">Solution Bugs</a>
+        </li>
+        <li class="{% if app.request.attributes.get('_route') == 'adminGestionEditorsPage' %}active{% endif %}">
+            <a class="tablesLinks" href="{{ path('adminGestionEditorsPage') }}">Editeurs</a>
+        </li>
+        <li class="{% if app.request.attributes.get('_route') == 'adminGestionGamesPage' %}active{% endif %}">
+            <a class="tablesLinks" href="{{ path('adminGestionGamesPage') }}">Jeux</a>
+        </li>
+        <li class="{% if app.request.attributes.get('_route') == 'adminGestionUsersPage' %}active{% endif %}">
+            <a class="tablesLinks" href="{{ path('adminGestionUsersPage') }}">Utilisateurs</a>
+        </li>
+        <li class="{% if app.request.attributes.get('_route') == 'adminGestionCommentsPage' %}active{% endif %}">
+            <a class="tablesLinks" href="{{ path('adminGestionCommentsPage') }}">Commentaires</a>
+        </li>
+        <li class="{% if app.request.attributes.get('_route') == 'adminGestionContactMessagesPage' %}active{% endif %}">
+            <a class="tablesLinks" href="{{ path('adminGestionContactMessagesPage') }}">Messages reçus</a>
+        </li>
      </ul>
     </div>
    </div>
 
    <div class="row">
     <div class="col-g-12">
-     <h3>Titre table</h3>
+     <h3>{% if app.request.attributes.get('_route') == 'adminGestionBugsPage' %}Bugs
+     {% elseif app.request.attributes.get('_route') == 'adminGestionBugsFixPage' %}Bug Fixs
+     {% elseif app.request.attributes.get('_route') == 'adminGestionBugsSolutionPage' %}Solutions Bug
+     {% elseif app.request.attributes.get('_route') == 'adminGestionEditorsPage' %}Editeurs
+     {% elseif app.request.attributes.get('_route') == 'adminGestionGamesPage' %}Jeux
+     {% elseif app.request.attributes.get('_route') == 'adminGestionUsersPage' %}Utilisateurs
+     {% elseif app.request.attributes.get('_route') == 'adminGestionCommentsPage' %}Commentaires
+     {% elseif app.request.attributes.get('_route') == 'adminGestionContactMessagesPage' %}Messages reçus
+     {% else %}Erreur : table non existante ou données invalides
+     {% endif %}
+     </h3>
     </div>
    </div>
 
    <div class="row">
     <div class="col-lg-12">
      <table class="adminBox">
+
+     {#Table des bugs#}
+     {% if app.request.attributes.get('_route') == 'adminGestionBugsPage' %}
       <thead class="thead-light">
       <tr>
        <th>Titre Bug</th>
@@ -64,44 +77,220 @@
        <th>Image Bug</th>
        <th>Sévérité Bug</th>
        <th>Fréquence Bug</th>
+       <th>Jeu</th>
        <th>Texte Bug</th>
-       <th>Bug résolu</th>
+       <th>Posté par</th>
+       <th>Validé</th>
       </tr>
       </thead>
       <tbody>
+      {% for bug in bugs %}
       <tr>
        <td>
-        Titre bug 01
+        {{ bug.titleBug }}
        </td>
-       <td>Sous-titre bug 01</td>
-       <td>Texte intro bug 01</td>
-       <td><img src="assets/images/4975-dark-souls-bug.jpg" alt=""></td>
-       <td>Modéré</td>
-       <td>Peu courant</td>
-       <td>Ouvrez-moi bien vite, nous ordonne-t-il. Vers l'époque et le lieu rappelait la funèbre salle à manger s'ouvrit d'elle-même, plus féconde ? Infligé par la vie dans une fosse assez profonde pour que se gèlent complètement les
-        circuits de distribution. Pâtisserie et littérature mêlées, cela s'entend d'une pleine et entière si j'entrevoyais une nouvelle occasion de reproches. Celles d'une femmelette, pas un traître liard. Mauvaises relations de
-        la vie universitaire l'avait toujours guidée, sauvée. Suivant les pas que vous étiez la plus belle voix de bronze, dans la loge ; sans doute d'aller plus d'un lecteur. Effrayé des grands et du peuple qu'il avait su conserver
-        sa colonne en bon ordre.</td>
-       <td>Non</td>
+       <td>{{ bug.subtitleBug }}</td>
+       <td>{{ bug.smallTextBug }}</td>
+       <td><img src="{{ asset('images/' ~ bug.descriptionImgBug) }}" alt=""></td>
+       <td>{{ bug.severityBug }}</td>
+       <td>{{ bug.frequencyBug }}</td>
+       <td>{{ bug.idGame.nameGame }}</td>
+       <td>{{ bug.descriptionTextBug }}</td>
+       <td>{{ bug.idUser.email }}</td>
+       <td>{{ bug.published }}
+       </td>
        <td><button>Modifier</button></td>
        <td><button>Supprimer</button></td>
       </tr>
+      {% endfor %}
+      </tbody>
+
+    {#Table des Fix de bug#}
+      {% elseif app.request.attributes.get('_route') == 'adminGestionBugsFixPage' %}
+      <thead class="thead-light">
+      <tr>
+       <th>Bug concerné</th>
+       <th>Fixé ?</th>
+       <th>Numéro MàJ corrective</th>
+       <th>Date du fix du bug</th>
+      </tr>
+      </thead>
+      <tbody>
+      {% for bugFix in bugFixs %}
       <tr>
        <td>
-        Titre bug 02
+        {{ bugFix.idBug.titleBug }}
        </td>
-       <td>Sous-titre bug 02</td>
-       <td>Texte intro bug 02</td>
-       <td><img src="assets/images/divers-jeux-video-5195144b841cb.jpg" alt=""></td>
-       <td>Faible</td>
-       <td>Peu courant</td>
-       <td>Effrayé des grands et du peuple qu'il avait su conserver sa colonne en bon ordre. Féru d'enthousiasme pour lui, ce n'aurait pas réussi. Affectant un grand mépris lui venait de se vider. Dit le vieillard en sentait la pleine
-        réalité s'épandre en lui. Toi aussi tu es en présence de sa fiancée. Achever de distribuer les vivres par tête de soldat, et que ma langue parlait autant que mes forces physiques étaient presque épuisées. Car elle te croit
-        mort, mort ! Remettez le reste de vos jours. Ciré noir, frétillante de reflets, surmontée d'une pierre ponce, il y vivrait de sa vie ?</td>
-       <td>Non</td>
+       <td>{{ bugFix.resolved }}</td>
+       <td>{{ bugFix.majNumber }}</td>
+       <td>{{ bugFix.dateBugFix }}</td>
        <td><button>Modifier</button></td>
        <td><button>Supprimer</button></td>
       </tr>
+      {% endfor %}
+      </tbody>
+
+    {#Table des solutions des bugs#}
+      {% elseif app.request.attributes.get('_route') == 'adminGestionBugsSolutionPage' %}
+      <thead class="thead-light">
+      <tr>
+       <th>Titre Bug</th>
+       <th>Image solution</th>
+       <th>Texte solution</th>
+      </tr>
+      </thead>
+      <tbody>
+      {% for bugSolution in bugSolutions %}
+      <tr>
+       <td>
+        {{ bugSolution.idBug.titleBug }}
+       </td>
+       <td><img src="{{ asset('images/' ~ bugSolution.imgBugSolution) }}" alt=""></td>
+       <td>{{ bugSolution.textBugSolution }}</td>
+       <td><button>Modifier</button></td>
+       <td><button>Supprimer</button></td>
+      </tr>
+      {% endfor %}
+      </tbody>
+
+    {#Table des éditeurs#}
+      {% elseif app.request.attributes.get('_route') == 'adminGestionEditorsPage' %}
+      <thead class="thead-light">
+      <tr>
+       <th>Nom éditeur</th>
+       <th>Jeux liés</th>
+      </tr>
+      </thead>
+      <tbody>
+      {% for editor in editors %}
+      <tr>
+       <td>
+        {{ editor.editorName }}
+       </td>
+       <td>{% for editorGame in "{{ editor.games.nameGame }}" %}
+       {{ editorGame }}
+       {% endfor %}
+       </td>
+       <td><button>Modifier</button></td>
+       <td><button>Supprimer</button></td>
+      </tr>
+      {% endfor %}
+      </tbody>
+
+    {#Table des jeux#}
+      {% elseif app.request.attributes.get('_route') == 'adminGestionGamesPage' %}
+      <thead class="thead-light">
+      <tr>
+       <th>Nom</th>
+       <th>Année de publication</th>
+       <th>Taux bug</th>
+       <th>éditeur</th>
+       <th>Bug</th>
+      </tr>
+      </thead>
+      <tbody>
+      {% for game in games %}
+      <tr>
+       <td>
+        {{ game.nameGame }}
+       </td>
+       <td>{{ game.yearOfPublication }}</td>
+       <td>{{ game.bugRating }}</td>
+       <td>{{ game.idEditor.editorName }}</td>
+       <td>{% for gameBug in "{{ game.bugs.titleBug }}" %}
+       {{ gameBug }}
+       {% endfor %}
+       </td>
+       <td><button>Modifier</button></td>
+       <td><button>Supprimer</button></td>
+      </tr>
+      {% endfor %}
+      </tbody>
+
+    {#Table des utilisateurs#}
+      {% elseif app.request.attributes.get('_route') == 'adminGestionUsersPage' %}
+      <thead class="thead-light">
+      <tr>
+       <th>email</th>
+       <th>rôle</th>
+       <th>password</th>
+       <th>pseudonyme</th>
+       <th>Avatar</th>
+       <th>Verrouillé</th>
+       <th>Bug posté</th>
+       <th>Vérifié</th>
+      </tr>
+      </thead>
+      <tbody>
+      {% for user in users %}
+      <tr>
+       <td>
+        {{ user.email }}
+       </td>
+       <td>{{ user.roles |json_encode }}</td>
+       <td>{{ user.password }}</td>
+       <td>{{ user.pseudonym }}</td>
+       <td><img src="{{ asset('images/' ~ user.avatar) }}" alt=""></td>
+       <td>{{ user.locked }}</td>
+       <td>{% for userBug in "{{ user.bugs.titleBug }}" %}
+       {{ userBug }}
+       {% endfor %}
+       </td>
+       <td>{{ user.isVerified }}</td>
+       <td><button>Modifier</button></td>
+       <td><button>Supprimer</button></td>
+      </tr>
+      {% endfor %}
+      </tbody>
+
+    {#Table des commentaires#}
+      {% elseif app.request.attributes.get('_route') == 'adminGestionCommentsPage' %}
+      <thead class="thead-light">
+      <tr>
+       <th>Texte</th>
+       <th>Date</th>
+       <th>Utilisateur correspondant</th>
+       <th>Bug</th>
+      </tr>
+      </thead>
+      <tbody>
+      {% for comment in comments %}
+      <tr>
+       <td>{{ comment.textComments }}</td>
+       <td>{{ comment.date }}</td>
+       <td>{{ comment.idUser.email }}</td>
+       <td>{{ comment.idBug.titleBug }}</td>
+       <td><button>Modifier</button></td>
+       <td><button>Supprimer</button></td>
+      </tr>
+      {% endfor %}
+      </tbody>
+
+    {#Table des messages de contact#}
+      {% elseif app.request.attributes.get('_route') == 'adminGestionContactMessagesPage' %}
+      <thead class="thead-light">
+      <tr>
+       <th>Nom</th>
+       <th>email</th>
+       <th>Texte</th>
+      </tr>
+      </thead>
+      <tbody>
+      {% for contactMessage in contactMessages %}
+      <tr>
+       <td>{{ contactMessage.nameContactMessage }}</td>
+       <td>{{ contactMessage.mailContact }}</td>
+       <td>{{ contactMessage.textContactMessage }}</td>
+       <td><button>Modifier</button></td>
+       <td><button>Supprimer</button></td>
+      </tr>
+      {% endfor %}
+      </tbody>
+
+      {% else %}
+        <th>Pas de table correspondante trouvée</th>
+     {% endif %}
+
       </tbody>
      </table>
      <button>Créer un nouvel article</button>
