Edit comment and bub modifs

--- a/templates/reset_password/check_email.html.twig
+++ b/templates/reset_password/check_email.html.twig
@@ -1,11 +1,40 @@
 {% extends 'base.html.twig' %}
+{% block content %}
+<div class="page-heading">
+   <div class="container">
+    <div class="row">
+     <div class="col-lg-4"></div>
+     <div class="col-lg-8">
+      <div class="top-text header-text">
+       <h2>Password Reset Email Sent</h2>
+      </div>
+     </div>
+     <div class="col-lg-4"></div>
+    </div>
+   </div>
+  </div>
 
-{% block title %}Password Reset Email Sent{% endblock %}
-
-{% block body %}
-    <p>
+<div class="listing-page">
+   <div class="container">
+    <div class="row">
+     <div class="col-lg-12">
+      <div class="naccs">
+       <div class="grid">
+        <div class="row">
+        <p>
         If an account matching your email exists, then an email was just sent that contains a link that you can use to reset your password.
         This link will expire in {{ resetToken.expirationMessageKey|trans(resetToken.expirationMessageData, 'ResetPasswordBundle') }}.
     </p>
     <p>If you don't receive an email please check your spam folder or <a href="{{ path('app_forgot_password_request') }}">try again</a>.</p>
+
+    </div>
+      </div>
+     </div>
+    </div>
+   </div>
+  </div>
+ </div>
+
+
 {% endblock %}
+
