--- a/templates/pages/creationBug.html.twig
+++ b/templates/pages/creationBug.html.twig
@@ -21,6 +21,40 @@
       <div class="naccs">
        <div class="grid">
         <div class="row">
+        {{ form_start(bugForm) }}
+        <div class="col-lg-12 bugFormSpaces">
+        <fieldset>
+        <div class="col-lg-12 bugInsideFormSpaces">
+        {{ form_row(bugForm.idGame, {'label': 'Jeu concerné par le bug :' }) }}
+        </div>
+        <div class="col-lg-12 bugInsideFormSpaces">
+            <p class="textAddGame">Le jeu concerné n'est pas dans la liste ? <a href="{{ path('gameCreationPage') }}">Ajoutez-le !</a></p>
+        </div>
+        </fieldset>
+        </div>
+
+        <div class="col-lg-12 bugFormSpaces">
+        <h3>Données Bug</h3>
+        {{ form_row(bugForm.titleBug, {'label': 'Titre du Bug :' }) }}
+        {{ form_row(bugForm.subtitleBug, {'label': 'Sous-titre du Bug :' }) }}
+        {{ form_row(bugForm.smallTextBug, {'label': 'Texte intro du Bug :' }) }}
+        {{ form_row(bugForm.descriptionImgBug, {'label': 'Image de description :' }) }}
+        {{ form_row(bugForm.descriptionTextBug, {'label': 'Description du Bug :' }) }}
+        {{ form_row(bugForm.severityBug, {'label': 'Sévérité du Bug :' }) }}
+        {{ form_row(bugForm.frequencyBug, {'label': 'Fréquence du Bug :' }) }}
+        </div>
+        <div class="col-lg-12 bugFormSpaces">
+        <h3>Bug Fix</h3>
+        {{ form_row(bugForm.idBugFix, {'label': 'Titre du Bug :' }) }}
+        {{ form_row(bugForm.subtitleBug, {'label': 'Titre du Bug :' }) }}
+        {{ form_row(bugForm.smallTextBug, {'label': 'Titre du Bug :' }) }}
+        {{ form_row(bugForm.descriptionTextBug, {'label': 'Titre du Bug :' }) }}
+        {{ form_row(bugForm.descriptionImgBug, {'label': 'Titre du Bug :' }) }}
+        {{ form_row(bugForm.severityBug, {'label': 'Titre du Bug :' }) }}
+        {{ form_row(bugForm.frequencyBug, {'label': 'Titre du Bug :' }) }}
+        </div>
+
+        {{ form_end(bugForm) }}
          <form id="search-form" name="sB" method="submit" role="search" action="#">
           <div class="row">
            <div class="col-lg-12 bugFormSpaces">
@@ -89,22 +123,7 @@
              </div>
             </fieldset>
            </div>
-           <div class="col-lg-12 bugFormSpaces">
-            <fieldset>
-             <div class="col-lg-12 bugInsideFormSpaces">
-              <label for="bugSolutionTitle">Titre de la solution du bug:</label>
-              <input type="text" class="inputBugForm" name="bugSolutionTitle">
-             </div>
-             <div class="col-lg-12 bugInsideFormSpaces">
-              <label for="bugSolutionImage">Image solution bug:</label>
-              <input type="file" name="bugSolutionImage">
-             </div>
-             <div class="col-lg-12 bugInsideFormSpaces">
-              <label for="bugSolutionText">Texte de la solution du bug :</label>
-              <textarea id="bugSolutionText" class="textareaBugCreation" name="bugSolutionText"></textarea>
-             </div>
-            </fieldset>
-           </div>
+           
            <div class="col-lg-4"></div>
            <div class="col-lg-4"></div>
            <div class="col-lg-4">
