--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -1,9 +1,27 @@
 {% extends 'base.html.twig' %}
+{% block content %}
+<div class="page-heading">
+   <div class="container">
+    <div class="row">
+     <div class="col-lg-4"></div>
+     <div class="col-lg-8">
+      <div class="top-text header-text">
+       <h2>Reset your password</h2>
+      </div>
+     </div>
+     <div class="col-lg-4"></div>
+    </div>
+   </div>
+  </div>
 
-{% block title %}Reset your password{% endblock %}
-
-{% block body %}
-    {% for flashError in app.flashes('reset_password_error') %}
+<div class="listing-page">
+   <div class="container">
+    <div class="row">
+     <div class="col-lg-12">
+      <div class="naccs">
+       <div class="grid">
+        <div class="row">
+         {% for flashError in app.flashes('reset_password_error') %}
         <div class="alert alert-danger" role="alert">{{ flashError }}</div>
     {% endfor %}
     <h1>Reset your password</h1>
@@ -19,4 +37,13 @@
 
         <button class="btn btn-primary">Send password reset email</button>
     {{ form_end(requestForm) }}
+
+    </div>
+      </div>
+     </div>
+    </div>
+   </div>
+  </div>
+ </div>
+
 {% endblock %}
