--- a/templates/reset_password/reset.html.twig
+++ b/templates/reset_password/reset.html.twig
@@ -1,12 +1,41 @@
 {% extends 'base.html.twig' %}
+{% block content %}
+<div class="page-heading">
+   <div class="container">
+    <div class="row">
+     <div class="col-lg-4"></div>
+     <div class="col-lg-8">
+      <div class="top-text header-text">
+       <h2>Reset your password</h2>
+      </div>
+     </div>
+     <div class="col-lg-4"></div>
+    </div>
+   </div>
+  </div>
 
-{% block title %}Reset your password{% endblock %}
-
-{% block body %}
-    <h1>Reset your password</h1>
+<div class="listing-page">
+   <div class="container">
+    <div class="row">
+     <div class="col-lg-12">
+      <div class="naccs">
+       <div class="grid">
+        <div class="row">
+        <h1>Reset your password</h1>
 
     {{ form_start(resetForm) }}
         {{ form_row(resetForm.plainPassword) }}
         <button class="btn btn-primary">Reset password</button>
     {{ form_end(resetForm) }}
+
+    </div>
+      </div>
+     </div>
+    </div>
+   </div>
+  </div>
+ </div>
+
+
 {% endblock %}
+
